@@ -2,8 +2,10 @@ AUX OpenFOAM-1.5-compile.patch 15006 RMD160 ba8423526b5244e3c30d9d38830a2fe79e3c
 AUX openfoam-utilities-compile-1.4.1_p20080827.patch 996 RMD160 0debfeb112bed547317d8d61a3fbdae1490050ba SHA1 87c9b4ace94e4eb7b0c16a39e041ec72fca7877e SHA256 1e6062ff63e4367067c229cc8348f5bbd5e6e96f2b9f109bbacb73f3f16310d5
 DIST OpenFOAM-1.4.1.General.gtgz 148526808 RMD160 e25d8bdfa63f15eeeb7b9f1cef09cc26fb7bef74 SHA1 56bbbf5b33c49d08cda35088a65b24d7dc59014f SHA256 c765b36639b42c737bc9ba1ac13c0f66efe20ee4a9f71a6ef987e86ebd50da28
 DIST OpenFOAM-1.5.General.gtgz 117334661 RMD160 bccaa9f8f99d31aa6c791d40b30dd9ad4f534041 SHA1 3577f562dc1f54bb32e1e0ef43f979418212c2f7 SHA256 d4cba2d9475523a53cea80b8d39da70d12bfffb9f46e2d1442946ba4a23efd31
+DIST openfoam-kernel-1.5_p20080905.patch 364112 RMD160 e91a0a0c964afa9ca4a37c1a32c1714f7b4a2fe3 SHA1 d3e1b77993f7dc22ffbc7274d90b83f326274b1b SHA256 4aac71627d45f981a4bfd371fcdcca732be8ce5654a66824276f56f099830ab7
 DIST openfoam-utilities-1.4.1_p20080827.patch 219964 RMD160 3b207a535e5978404d62976f38d26d0b4542443e SHA1 b564ca1dc2531bc15ceac06a31386e625d3f75e2 SHA256 01f6fdac61ca2ddbbf6c77e45b9f23d1d2ced617260b97710da22a5b4f4c04d1
+DIST openfoam-utilities-1.5_p20080905.patch 1051697 RMD160 c6059c73624f300680d225de6329542c6e3c702e SHA1 1583f7ce23efe255592d0ec656c1241589d78a6c SHA256 aa10e7ec8f7c6f9c8b8b71e1e22b9b45fcda6a47d39cbb8a53e6f922ab6fc772
 EBUILD openfoam-utilities-1.4.1_p20080827.ebuild 4372 RMD160 331f929bdd0067fad5ea04c5c60344f05e14efa7 SHA1 47d257c3b670c74b525551786dcd8702f1e12f63 SHA256 93d43803db750ff010c12d10b6b76fb2d607a417b06e90997b4c59a6d53f3975
-EBUILD openfoam-utilities-1.5.ebuild 2194 RMD160 c72a0fd5da83a4c41ae2923bcc3fda49959459bc SHA1 312fc2064f041f315f06ed388eacf87a7d8589cc SHA256 920b09bfc513e9db6dac706bade7b23e1d3216d7a0ba8f5d03bc44ea1a74de02
-MISC ChangeLog 2479 RMD160 271e770579fbd58f44514de55e162358745a828f SHA1 57ae54cf74e92563e54c5665594aa4626cfa7d9b SHA256 403b178da8f510c8c3660004bba3460e104847b6c34cbfc59fc19386c8317f1e
+EBUILD openfoam-utilities-1.5_p20080905.ebuild 2492 RMD160 0e9d05565df5948419045528f0ce83848ede6ff8 SHA1 54bf3971bbe4e70eb80809162a4b9d9335b437da SHA256 b0626c00888e8e4f00c1d1789ee0c52d74b9670b7ac48488f6eeeb40857f233c
+MISC ChangeLog 2627 RMD160 dde9e2166665789392a7f15b9e858e432cb58b22 SHA1 9ed6041e7357acbe78e2531afb685e92c9b487c4 SHA256 73d01abe25711188c59c73a28c3c06ed748ba6a689a27837eacf197179b20f97
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
